<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.maxdexter.mytasks.ui.calendar.CalendarFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.maxdexter.mytasks.ui.profile.ProfileFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.maxdexter.mytasks.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" /><action android:id="@+id/action_global_navigation_home" app:destination="@id/navigation_home"/><action android:id="@+id/action_global_navigation_dashboard" app:destination="@id/navigation_dashboard"/><action android:id="@+id/action_global_navigation_notifications" app:destination="@id/navigation_notifications"/>
    <dialog
        android:id="@+id/newTaskFragment"
        android:name="ru.maxdexter.mytasks.ui.newtask.NewTaskFragment"
        android:label="NewTaskFragment" /><action android:id="@+id/action_global_newTaskFragment" app:destination="@id/newTaskFragment"/>
</navigation>