<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newtask.NewTaskFragment"
        tools:ignore="RtlSymmetry">

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_title_wrap"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/normal_space_16dp"
    android:layout_marginLeft="@dimen/normal_space_16dp"
    android:layout_marginTop="@dimen/small_space_8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            />

</com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/normal_space_16dp"
            android:layout_marginLeft="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title_wrap">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_date_change"
            style="?attr/dateTimeTextAttr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:layout_marginRight="@dimen/normal_space_16dp"
            android:layout_marginLeft="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/tv_time_change"
            style="?attr/dateTimeTextAttr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_hint"
            android:layout_marginRight="@dimen/normal_space_16dp"
            android:layout_marginLeft="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_change" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?addButtonAttr"
            android:text="@string/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_change" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>