<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/normal_space_16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">


        <TextView
            android:id="@+id/textView2"
            style="?textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Authentication"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/auth"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textSize="12sp"
            android:text="@string/login"
            android:visibility="visible"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/exit"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <Button
            android:id="@+id/exit"
            android:text="@string/logout"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textSize="12sp"
            android:enabled="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/auth" />




        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            style="?textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synchronization"
            android:visibility="visible"
            android:layout_marginTop="@dimen/normal_space_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_download_fire_store"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/fui_transparent"
            android:src="@drawable/ic_baseline_sync_24"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />


        <TextView
            android:id="@+id/textView"
            style="?textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="101dp"
            android:text="@string/dark_theme"
            app:layout_constraintEnd_toStartOf="@+id/switch_app_theme"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_app_theme"
            style="@style/MySwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>