<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newtask.NewTaskFragment"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            android:layout_marginRight="@dimen/normal_space_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            android:layout_marginRight="@dimen/normal_space_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title_wrap">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_date_change"
            style="?attr/dateTimeTextAttr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            android:layout_marginRight="@dimen/normal_space_16dp"
            android:hint="@string/date_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/tv_time_change"
            style="?attr/dateTimeTextAttr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            android:layout_marginRight="@dimen/normal_space_16dp"
            android:hint="@string/time_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_change" />

        <TextView
            android:id="@+id/tv_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_space_16dp"
            android:layout_marginTop="@dimen/small_space_8dp"
            style="@style/TextStyle"
            android:text="@string/repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_change" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_repeat_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_space_16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_repeat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_repeat" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="?addButtonAttr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_add_file" />

        <ImageButton
            android:id="@+id/iv_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            app:layout_constraintBottom_toBottomOf="@+id/iv_add_file"
            app:layout_constraintEnd_toStartOf="@+id/iv_add_file"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/iv_add_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_attach_file_24"
            android:layout_marginTop="@dimen/normal_space_16dp"
            app:layout_constraintEnd_toStartOf="@+id/ib_delete"
            app:layout_constraintStart_toEndOf="@+id/iv_add_photo"
            app:layout_constraintTop_toBottomOf="@+id/switch_repeat_task" />

        <ImageButton
            android:id="@+id/ib_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="@+id/iv_add_file"
            app:layout_constraintEnd_toStartOf="@+id/ib_complete"
            app:layout_constraintStart_toEndOf="@+id/iv_add_file" />

        <ImageButton
            android:id="@+id/ib_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_baseline_check_circle_24"
            app:layout_constraintBottom_toBottomOf="@+id/ib_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_delete" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>